noinst_LIBRARIES = libvf.a

AM_CPPFLAGS = -fPIC

INCLUDES = -I$(top_srcdir)/MY_VFLIB/src
libvf_a_SOURCES=src/argedit.cpp src/argraph.cpp src/argloader.cpp src/error.cpp src/gene.cpp \
	src/gene_mesh.cpp src/match.cpp src/ull_state.cpp src/ull_sub_state.cpp \
	src/vf_mono_state.cpp src/vf_state.cpp src/vf_sub_state.cpp \
	src/vf2_state.cpp src/vf2_sub_state.cpp src/vf2_mono_state.cpp \
	src/sd_state.cpp \
	src/sortnodes.cpp src/xsubgraph.cpp
