SET(LIB_PYCOMMON_SOURCE pycommon.cpp)
ADD_LIBRARY(pycommon MODULE ${LIB_PYCOMMON_SOURCE})
INSTALL_TARGETS(/lib/pymort pycommon)
TARGET_LINK_LIBRARIES(pycommon ${BOOSTPLIB})
TARGET_LINK_LIBRARIES(pycommon ${PYTHONLIB})
TARGET_LINK_LIBRARIES(pycommon mort)

SET(LIB_PYOBJECT_SOURCE pyobject.cpp)
ADD_LIBRARY(pyobject MODULE ${LIB_PYOBJECT_SOURCE})
INSTALL_TARGETS(/lib/pymort pyobject)
TARGET_LINK_LIBRARIES(pyobject ${BOOSTPLIB})
TARGET_LINK_LIBRARIES(pyobject ${PYTHONLIB})
TARGET_LINK_LIBRARIES(pyobject mort)

SET(LIB_PYOBJFUN_SOURCE pyobjfun.cpp)
ADD_LIBRARY(pyobjfun MODULE ${LIB_PYOBJFUN_SOURCE})
INSTALL_TARGETS(/lib/pymort pyobjfun)
TARGET_LINK_LIBRARIES(pyobjfun ${BOOSTPLIB})
TARGET_LINK_LIBRARIES(pyobjfun ${PYTHONLIB})
TARGET_LINK_LIBRARIES(pyobjfun mort)



SET(LIB_PYFORMAT_SOURCE pyformat.cpp)
ADD_LIBRARY(pyformat MODULE ${LIB_PYFORMAT_SOURCE})
INSTALL_TARGETS(/lib/pymort pyformat)
TARGET_LINK_LIBRARIES(pyformat ${BOOSTPLIB})
TARGET_LINK_LIBRARIES(pyformat ${PYTHONLIB})
TARGET_LINK_LIBRARIES(pyformat mort)

SET(LIB_PYCAPBOX_SOURCE pycapbox.cpp)
ADD_LIBRARY(pycapbox MODULE ${LIB_PYCAPBOX_SOURCE})
INSTALL_TARGETS(/lib/pymort pycapbox)
TARGET_LINK_LIBRARIES(pycapbox ${BOOSTPLIB})
TARGET_LINK_LIBRARIES(pycapbox ${PYTHONLIB})
TARGET_LINK_LIBRARIES(pycapbox mort)



#SET(LIB_PYMORTGL_SOURCE pymortgl.cpp)
#ADD_LIBRARY(pymortgl MODULE ${LIB_PYMORTGL_SOURCE})
#INSTALL_TARGETS(/lib pymortgl)
#TARGET_LINK_LIBRARIES(pymortgl /usr/local/lib/libboost_python-1_34_1.dylib)
#TARGET_LINK_LIBRARIES(pymortgl mort mortgl)

INSTALL_FILES(/lib/pymort/ .py hashcode __init__)
INSTALL_FILES(/lib/ .py pyleap)
