INCLUDES		= -I$(top_builddir)/freelib

lib_LTLIBRARIES		= libboost_test.la

libboost_test_la_SOURCES= unit_test_main.cpp unit_test_suite.cpp unit_test_monitor.cpp unit_test_log.cpp unit_test_parameters.cpp framework.cpp test_tools.cpp \
			  results_collector.cpp results_reporter.cpp progress_monitor.cpp execution_monitor.cpp compiler_log_formatter.cpp plain_report_formatter.cpp \
			  xml_log_formatter.cpp xml_report_formatter.cpp
